# self-assembly

./: .gitignore  .gitmodules  Overview_and_Future_Work.md  README.md
CAD/: Hub.SLDPRT  HubV2.1 - 6 Sides.SLDPRT  HubV2.1-4Sides.SLDPRT  HubV2.1-8Sides.SLDPRT  HubV2.1-8Sides.STL  HubV2.2-8Sides.STL  Initial 3D Printer Research.xlsx  LegsV2.1.SLDPRT  ModularBox.SLDPRT  ModularBox2.SLDPRT  ModularBox5.SLDPRT  ModularBox5.STL  ModularBoxPrint1.STL
CAD/3d-printing/: 3D_Printer_Comparisons.xlsx
CAD/Body/: V1_Hub.SLDPRT  V2_Hub.SLDPRT  V3_Hub.SLDPRT  V3_Hub.STL  V4_Hub_4Sides.SLDPRT  V4_Hub_4Sides.STL  V4_Hub_6Sides.SLDPRT  V4_Hub_6Sides.STL  V4_Hub_8Sides.SLDPRT  V4_Hub_8Sides.STL  V4_Legs.SLDPRT  V4_Legs.STL  V5_Legs.STL  V6_Hub_8Sides.SLDPRT
CAD/Connectors/: V1_Hook.SLDPRT  V2_Hook.SLDPRT  V4_Hook.SLDPRT  V4_Hook.STL  V5_Hook.SLDPRT  V5_Hook.STL
ParticleSimulator/: README.md  animate.py  backend.py  configuration.py  default.nix  requirements.txt  run_experiments.sh  run_sim.py  simulator.py  test.py  utilities.py
ParticleSimulator/test/: test_examples.py
PentominoGeneration/: PolyominoGenerator.py  README.md  model_generator.py  polyomino_generator.py  psuedo-code.py  readme.md
PythonSimulation/: README.md  RandomCodeFromOnline.py
PythonSimulation/data/: simData.py
PythonSimulation/src/: HandmadeSim.py  bounce_0.py  node.py  noteSpace.py  playGround.py  rules.py  sim.py  sim_pygame.py  testRuns.py  weasel.py
background_resources/basic-haskell/: README.md  mp1-haskell.cabal
background_resources/ex_pygame/: README
basic-haskell/app/: Main.hs  Main.hs~
dataAnalysis/: README.md
dataAnalysis/deliver/: 2018-07-22-jw-weaselball_analysis.html  2018-07-22-jw-weaselball_analysis.ipynb  2018-07-22-jw-weaselball_analysis.py
dataAnalysis/develop/: 2018-08-22_jw_transition_matrix_convergence.ipynb  2018-8-15-JW_CUDA_test.html  August-5-2018-jw-best_starting_location.html  August-5-2018-jw-best_starting_location.ipynb  August-5-2018-jw-best_starting_location.py  August_10_JW_Verification.html  August_10_JW_Verification.ipynb  August_10_JW_Verification.py  August_10_JW_display_empty.html  August_10_JW_display_empty.ipynb  August_10_JW_display_empty.py  August_14_JW_benchmark_test.html  August_14_JW_benchmark_test.ipynb  August_14_JW_benchmark_test.py  CoarseMarkovModel.html  CoarseMarkovModel.ipynb  CoarseMarkovModel.py  July-22-2018-jw-data_models_experiments_trees.html  July-22-2018-jw-data_models_experiments_trees.ipynb  July-22-2018-jw-data_models_experiments_trees.py  July-22-2018-jw-data_models_experiments_trees.txt  July-22-2018-jw-weaselball-heatmap.html  July-22-2018-jw-weaselball-heatmap.ipynb  July-22-2018-jw-weaselball-heatmap.py  July-28-2018-jw-test_diagnol.html  July-28-2018-jw-test_diagnol.ipynb  July-28-2018-jw-test_diagnol.py  Kron_benchmark.ipynb  Process_Trajectories.html  Process_Trajectories.ipynb  Process_Trajectories.py
dataAnalysis/figures/: box_experiment.xcf  hittingtime_Normalized_mean_hitting_times.eps  hittingtime_immediate_collision_probability.eps  hittingtime_position_heatmap.eps
dataAnalysis/src/: kron_prod.py  kronprod.py  mapping.py  randomWalk.py
dataAnalysis/test/: test_kron.py
ex_pygame/: chimp.py
gazebo/: .gitignore  README.md  notes.txt  simulate.world
gazebo/devel/: .catkin  .rosinstall  setup.sh
gazebo/scripts/: Robot_Config.txt  create_workspace.sh  getCLTData.py  getWeaselBallData.py  install_dependencies.sh  install_new_updates.sh  run_1.sh  run_2.sh  run_4T.sh  setupEnvironment.sh
gazebo/src/weaselball_gazebo/: CMakeLists.txt  package.xml
gazebo/src/weaselball_gazebo/include/: bumpSensor.h  common.h  gazebo_log.h  helper.h  log.h  math.h  models.h  models2.h  movie.h  state.h  vicon.h  video.h  virtual_time.h  weazelball.h
gazebo/src/weaselball_gazebo/launch/: 1.launch  1weasel.launch  2.launch  4T.launch  4square.launch  multibot.launch  weazel.launch
gazebo/src/weaselball_gazebo/launch/include/: one_2_mount.launch  one_4T_mount.launch  one_4sq_mount.launch  one_mount.launch  one_robot.launch
gazebo/src/weaselball_gazebo/models/weazelsignaloff/: model.config  model.sdf
gazebo/src/weaselball_gazebo/models/weazelsignalon/: model.sdf
gazebo/src/weaselball_gazebo/models/weazelsun/: model.sdf
gazebo/src/weaselball_gazebo/models/weazeltable/: model.config  model.sdf
gazebo/src/weaselball_gazebo/plugins/: bumpSensor.cpp  initConditionHandler.cpp  stateRecorder.cpp
gazebo/src/weaselball_gazebo/src/: bumpSensor.cpp  configure.cpp  simulation_controller.cpp  stateRecorder.cpp
gazebo/src/weaselball_gazebo/worlds/: simulate.world
inductive-mazes/: inductive-mazes.cabal
inductive-mazes/src/: Maze.hs
microcontroller-code/: ros_esp8266.ino
open_cv/: .gitignore  README.md  ReadMe.md  group_finder.py  requirements.txt  track_balls.py  tracking.py  trajectory_data.txt  wba.py  weasel_balls.py
open_cv/src/: configuration.py  edgeDetect.py  extractor.py  flannMatcher.py  group_finder.py  requirements.txt  tracking.py
ros_esp8266/: ESP8266Hardware.h  ros_esp8266.ino  ros_esp8266_updated.ino
weaselbot_sim/: README.md  pymunk-simulation.py  readme.md  sandbox-ajborn2.py  sandbox-copy.py  sandbox.py  sandbox2-ajborn2.py  sandboxcopy.py
(+90 files in other folders)
